create index career path in vector database